--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="root" class="page">
+      <div id="mymain"></div>
+    </div>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
   </body>
 </html>
