--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created by devadn"
     />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="root" class="page">
-      <div id="mymain"></div>
+
     </div>
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
