--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
     <title>7 Fallen</title>
   </head>
   <body>
-    <div id="root" class="page">
-
-    </div>
-    
+    <div id="root" class="page"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
