--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>7 Fallen</title>
   </head>
   <body>
-    <div id="root" class="page"></div>
+    <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
