--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html class="notranslate" lang="en" translate="no">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created by devadn"
-    />
-    <meta name="google" content="notranslate">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>7 Fallen</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-  </body>
+<html class="notranslate" lang="en" translate="no" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="7 Fallen | Jeu de cartes à collectionner - Deckbuilder">
+  <meta property="og:description"
+    content="Le deckbuilder 7 Fallen - Pour créer, enregistrer et partager tous vos decks 7 fallen.">
+  <meta property="og:image" itemprop="image" content="https://test-seven.site/opengraph/deckbuilder.png">
+  <meta property="og:image:secure_url" itemprop="image" content="https://test-seven.site/opengraph/deckbuilder.png">
+  <meta property="og:url" content="https://test-seven.site/">
+  <meta property="og:site_name" content="7Fallen">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twiter:site" content="@7Fallen">
+  <meta name="description" content="Web site created by devadn" />
+  <meta name="google" content="notranslate">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta property="fb:app_id" content="126500632746860">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <title>7 Fallen</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+</body>
+
 </html>
