--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <meta property="og:site_name" content="7Fallen">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twiter:site" content="@7Fallen">
+  <meta name="title" content="7 Fallen | Jeu de cartes à collectionner - Deckbuilder" />
   <meta name="description" content="Web site created by devadn" />
   <meta name="google" content="notranslate">
   <meta name="apple-mobile-web-app-capable" content="yes">
