--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twiter:site" content="@7Fallen">
   <meta name="title" content="7 Fallen | Jeu de cartes à collectionner - Deckbuilder" />
-  <meta name="description" content="Web site created by devadn" />
+  <meta name="description"
+    content="Le deckbuilder 7 Fallen - Pour créer, enregistrer et partager tous vos decks 7 fallen." />
   <meta name="google" content="notranslate">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta property="fb:app_id" content="126500632746860">
